--- a/Docs/Book/C++Examples/CMakeLists.txt
+++ b/Docs/Book/C++Examples/CMakeLists.txt
@@ -18,12 +18,9 @@ find_package( MyRDKit COMPONENTS FileParsers SmilesParse Depictor RDGeometryLib
   MolAlign Optimizer RDGeometryLib ForceField ForceFieldHelpers Alignment
   ForceField ForceFieldHelpers MolTransforms EigenSolvers )
 
-include_directories( ${RDKIT_INCLUDE_DIR} ${CAIRO_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
-message( "${CAIRO_INCLUDE_DIRS}" )
-
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
 
-set( LIBS ${RDKIT_LIBRARIES} ${Boost_LIBRARIES} ${CAIRO_LIBRARIES} z )
+set( LIBS ${RDKIT_LIBRARIES} z )
 
 foreach( exnum RANGE 1 16 )
   message( "Example : ${exnum}" )
