--- a/Code/GraphMol/MolDraw2D/CMakeLists.txt
+++ b/Code/GraphMol/MolDraw2D/CMakeLists.txt
@@ -21,22 +21,18 @@ RDGeometryLib
   ${RDKit_THREAD_LIBS} )
 
 if(RDK_BUILD_QT_SUPPORT)
-  #find_package(Qt5 COMPONENTS Widgets OpenGL REQUIRED)
-  find_package(Qt5Widgets REQUIRED)
-  find_package(Qt5OpenGL REQUIRED)
+  find_package(Qt5 COMPONENTS Widgets OpenGL REQUIRED)
 
   target_sources(MolDraw2D PRIVATE MolDraw2DQt.cpp)
-  target_include_directories(MolDraw2D PUBLIC ${Qt5Widgets_INCLUDE_DIRS} ${Qt5OpenGL_INCLUDE_DIRS})
   target_compile_options(MolDraw2D PRIVATE "-std=c++11")
-  target_link_libraries(MolDraw2D PUBLIC ${Qt5Widgets_LIBRARIES} ${Qt5OpenGL_LIBRARIES})
+  target_link_libraries(MolDraw2D PUBLIC Qt5::Widgets Qt5::OpenGL)
   rdkit_headers(MolDraw2DQt.h DEST GraphMol/MolDraw2D)
 endif(RDK_BUILD_QT_SUPPORT)
 
 if(RDK_BUILD_CAIRO_SUPPORT)
   find_package(Cairo REQUIRED)
-  target_include_directories(MolDraw2D PUBLIC ${CAIRO_INCLUDE_DIRS})
   target_compile_definitions(MolDraw2D PUBLIC "-DRDK_CAIRO_BUILD")
-  target_link_libraries(MolDraw2D PUBLIC ${CAIRO_LIBRARIES})
+  target_link_libraries(MolDraw2D PUBLIC Cairo::Cairo)
   target_sources(MolDraw2D PRIVATE MolDraw2DCairo.cpp)
   rdkit_headers(MolDraw2DCairo.h DEST GraphMol/MolDraw2D)
 endif(RDK_BUILD_CAIRO_SUPPORT)
