fix a mistake made during the merge

--- a/Code/GraphMol/MolDraw2D/CMakeLists.txt
+++ b/Code/GraphMol/MolDraw2D/CMakeLists.txt
@@ -12,6 +12,14 @@ rdkit_headers(MolDraw2D.h
   DEST GraphMol/MolDraw2D
 )
 
+rdkit_library(MolDraw2D MolDraw2D.cpp MolDraw2DSVG.cpp
+  MolDraw2DDetails.cpp MolDraw2DUtils.cpp
+  LINK_LIBRARIES
+  ChemReactions FileParsers SmilesParse Depictor MolTransforms RDGeometryLib
+  RDGeneral SubstructMatch Subgraphs GraphMol EigenSolvers
+RDGeometryLib
+  ${RDKit_THREAD_LIBS} )
+
 if(RDK_BUILD_QT_SUPPORT)
   find_package(Qt5 COMPONENTS Widgets OpenGL REQUIRED)
 
@@ -28,15 +36,6 @@ if(RDK_BUILD_CAIRO_SUPPORT)
   target_sources(MolDraw2D PRIVATE MolDraw2DCairo.cpp)
   rdkit_headers(MolDraw2DCairo.h DEST GraphMol/MolDraw2D)
 endif(RDK_BUILD_CAIRO_SUPPORT)
-
-rdkit_library(MolDraw2D MolDraw2D.cpp MolDraw2DSVG.cpp
-  ${CAIRODRAW2D_SRC} ${QTDRAW2D_SRC}
-  MolDraw2DDetails.cpp MolDraw2DUtils.cpp
-  LINK_LIBRARIES
-  ChemReactions FileParsers SmilesParse Depictor MolTransforms RDGeometryLib
-  RDGeneral SubstructMatch Subgraphs GraphMol EigenSolvers
-RDGeometryLib
-  ${RDKit_THREAD_LIBS} ${EXTRA_LOCAL_LIBS} )
 
 rdkit_test(moldraw2DTest1 test1.cpp LINK_LIBRARIES
   ChemReactions FileParsers SmilesParse Depictor RDGeometryLib
