--- a/External/FreeSASA/CMakeLists.txt
+++ b/External/FreeSASA/CMakeLists.txt
@@ -17,7 +17,7 @@ if(needDownload)
     execute_process(COMMAND ${CMAKE_COMMAND} -E tar zxf
       ${CMAKE_CURRENT_SOURCE_DIR}/master.tar.gz
       WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-      set(FREESASA_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/freesasa-master")
+      set(FREESASA_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/freesasa-windows")
       set(FREESASA_GETLINE "getline.c")
   else()
     downloadAndCheckMD5("https://github.com/mittinatten/freesasa/archive/master.tar.gz"
