Update CPack to create .deb files correctly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -321,7 +321,7 @@ else(RDK_TEST_COVERAGE)
   if (NOT CYGWIN)
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-  endif()   
+  endif()
  endif()
  if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    # We don't on C_FLAGS warnings to keep Avalon compiling quiet
@@ -391,25 +391,23 @@ SET(CPACK_RPM_COMPONENT_INSTALL ON)
 SET(CPACK_DEB_COMPONENT_INSTALL ON)
 SET(CPACK_MONOLITHIC_INSTALL OFF)
 
-SET(CPACK_COMPONENTS_ALL headers static_libs dynamic_libs python data docs extras base)
-set(CPACK_COMPONENT_DYNAMIC_LIBS_GROUP "Runtime")
+SET(CPACK_COMPONENTS_ALL runtime base data docs dev python extras)
+set(CPACK_COMPONENT_RUNTIME_GROUP "Runtime")
 set(CPACK_COMPONENT_BASE_GROUP "Runtime")
 set(CPACK_COMPONENT_DATA_GROUP "Runtime")
 set(CPACK_COMPONENT_DOCS_GROUP "Runtime")
-set(CPACK_COMPONENT_HEADERS_GROUP "Development")
-set(CPACK_COMPONENT_STATIC_LIBS_GROUP "Development")
+set(CPACK_COMPONENT_DEV_GROUP "Development")
 set(CPACK_COMPONENT_PYTHON_GROUP "Python")
 set(CPACK_COMPONENT_EXTRAS_GROUP "Extras")
-
 
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "RDKit")
 SET(CPACK_PACKAGE_VENDOR "rdkit.org")
 SET(CPACK_PACKAGE_CONTACT "greg.landrum@gmail.com")
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
 SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/license.txt")
-SET(CPACK_PACKAGE_VERSION_MAJOR "2011")
-SET(CPACK_PACKAGE_VERSION_MINOR "6")
-SET(CPACK_PACKAGE_VERSION_PATCH "1")
+SET(CPACK_PACKAGE_VERSION_MAJOR "2017")
+SET(CPACK_PACKAGE_VERSION_MINOR "9")
+SET(CPACK_PACKAGE_VERSION_PATCH "18")
 SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")
 #IF(WIN32 AND NOT UNIX)
 #  # There is a bug in NSI that does not handle full unix paths properly. Make
