--- a/.gitignore
+++ b/.gitignore
@@ -76,8 +76,4 @@ __pycache__/
 /Projects/DbCLI/testData/bzr/
 /rdkit/ML/Data/test_data/testgeneral.dat.pkl
 /rdkit/ML/Data/test_data/testquant.qdat.pkl
-<<<<<<< HEAD
-.DS_Store
-=======
-.DS_Store
->>>>>>> 4862c920a536fb015a99851355dbd16d4a5d4d3e
+/cmake-build-debug/*
