switch to using a release version on linux (windows still needs to be looked at)

--- a/External/FreeSASA/CMakeLists.txt
+++ b/External/FreeSASA/CMakeLists.txt
@@ -22,7 +22,7 @@ if(needDownload)
       set(FREESASA_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/freesasa-windows")
       set(FREESASA_GETLINE "getline.c")
   else()
-    downloadAndCheckMD5("https://github.com/mittinatten/freesasa/archive/master.tar.gz"
+    downloadAndCheckMD5("https://github.com/mittinatten/freesasa/releases/download/2.0.1/freesasa-2.0.1.tar.gz"
           "${CMAKE_CURRENT_SOURCE_DIR}/master.tar.gz"
           "")
     execute_process(COMMAND ${CMAKE_COMMAND} -E tar zxf
