--- a/Code/GraphMol/MolDraw2D/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/MolDraw2D/Wrap/CMakeLists.txt
@@ -2,7 +2,7 @@ rdkit_python_extension(rdMolDraw2D
                        rdMolDraw2D.cpp
                        DEST Chem/Draw
                        LINK_LIBRARIES MolDraw2D
-Depictor FileParsers SubstructMatch MolTransforms GraphMol
+Depictor ChemReactions FileParsers SubstructMatch MolTransforms GraphMol
 DataStructs EigenSolvers RDGeometryLib RDGeneral RDBoost ${EXTRA_LOCAL_LIBS})
 
 add_pytest(pyMolDraw2D ${CMAKE_CURRENT_SOURCE_DIR}/testMolDraw2D.py)
