--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -405,9 +405,9 @@ SET(CPACK_PACKAGE_VENDOR "rdkit.org")
 SET(CPACK_PACKAGE_CONTACT "greg.landrum@gmail.com")
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
 SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/license.txt")
-SET(CPACK_PACKAGE_VERSION_MAJOR "2017")
-SET(CPACK_PACKAGE_VERSION_MINOR "9")
-SET(CPACK_PACKAGE_VERSION_PATCH "18")
+SET(CPACK_PACKAGE_VERSION_MAJOR ${RDKit_Year})
+SET(CPACK_PACKAGE_VERSION_MINOR ${RDKit_Month})
+SET(CPACK_PACKAGE_VERSION_PATCH ${RDKit_Revision})
 SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")
 #IF(WIN32 AND NOT UNIX)
 #  # There is a bug in NSI that does not handle full unix paths properly. Make
