Use numpy not numeric for boost 1.65+ - fixes #1581 (#1664)
boost python numeric no longer exists in boost 1.65, so check boost version and conditionally use boost python numpy.

--- a/Code/GraphMol/SLNParse/CMakeLists.txt
+++ b/Code/GraphMol/SLNParse/CMakeLists.txt
@@ -56,7 +56,7 @@ rdkit_headers(SLNAttribs.h
 
 rdkit_test(testSLNParse test.cpp
            LINK_LIBRARIES SLNParse SmilesParse SubstructMatch
-GraphMol RDGeometryLib RDGeneral
+GraphMol RDGeometryLib RDGeneral Boost::regex
 )
 
 add_subdirectory(Wrap)
