--- a/Code/JavaWrappers/gmwrapper/CMakeLists.txt
+++ b/Code/JavaWrappers/gmwrapper/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.8)
 
 project (jGraphMolJava Java)
 
@@ -102,13 +102,17 @@ endif()
 
 SET(SWIG_MODULE_GraphMolWrap_EXTRA_DEPS ${SWIG_SRC_FILES} )
 
-SWIG_ADD_MODULE(GraphMolWrap "java" GraphMolJava.i )
+SWIG_ADD_LIBRARY(GraphMolWrap TYPE MODULE LANGUAGE java SOURCES GraphMolJava.i )
 
 # it doesnt seem like the threading libs should need to be here, but
 # as of Oct 2012 using boost 1.51 under at least ubuntu 12.04 we get a
 # link error if they aren't there.
 SWIG_LINK_LIBRARIES(GraphMolWrap ${RDKit_Wrapper_Libs}
       ${Boost_SERIALIZATION_LIBRARY} ${RDKit_THREAD_LIBS})
+
+MESSAGE("WRAPPER: ${RDKit_Wrapper_Libs}")
+MESSAGE("serial: ${Boost_SERIALIZATION_LIBRARY}")
+MESSAGE("THREAD: ${RDKit_THREAD_LIBS}")
 
 # code adapted from the wrapper code for
 # GDCM: http://gdcm.svn.sf.net/viewvc/gdcm/trunk/Wrapping/Java/CMakeLists.txt?view=markup
