--- a/External/CoordGen/CMakeLists.txt
+++ b/External/CoordGen/CMakeLists.txt
@@ -54,7 +54,7 @@ if(RDK_BUILD_COORDGEN_SUPPORT)
   rdkit_test(testCoordGen test.cpp
     LINK_LIBRARIES
     ${COORDGEN_LIBS}
-    FileParsers SmilesParse SubstructMatch GraphMol
+    MolAlign FileParsers SmilesParse SubstructMatch GraphMol
     RDGeneral DataStructs RDGeneral RDGeometryLib
     ${RDKit_THREAD_LIBS})
 endif(RDK_BUILD_COORDGEN_SUPPORT)
