add an option to directly use a substructure match for alignment

--- a/External/CoordGen/Wrap/CMakeLists.txt
+++ b/External/CoordGen/Wrap/CMakeLists.txt
@@ -2,6 +2,6 @@ rdkit_python_extension(rdCoordGen
                        rdCoordGen.cpp
                        DEST Chem
                        LINK_LIBRARIES
-                       ${COORDGEN_LIBS} GraphMol DataStructs RDGeometryLib RDGeneral RDBoost)
+                       ${COORDGEN_LIBS} MolAlign SubstructMatch GraphMol DataStructs RDGeometryLib RDGeneral RDBoost)
 add_pytest(pyCoordGen
          ${CMAKE_CURRENT_SOURCE_DIR}/testCoordGen.py)
