--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,10 @@ if(RDK_PGSQL_STATIC AND RDK_BUILD_PGSQL)
   endif(NOT RDK_INSTALL_STATIC_LIBS)
 endif()
 
+if(RDK_BUILD_COORDGEN_SUPPORT)
+    add_definitions(-DBUILD_COORDGEN_SUPPORT)
+endif()
+
 include(TestBigEndian)
 TEST_BIG_ENDIAN(RDK_BIG_ENDIAN)
 
