--- a/Code/GraphMol/Depictor/CMakeLists.txt
+++ b/Code/GraphMol/Depictor/CMakeLists.txt
@@ -1,13 +1,13 @@
 rdkit_library(Depictor
               RDDepictor.cpp EmbeddedFrag.cpp DepictUtils.cpp
-              LINK_LIBRARIES SubstructMatch GraphMol)
+              LINK_LIBRARIES ${RDK_COORDGEN_LIBS} SubstructMatch GraphMol)
 
 rdkit_headers(DepictUtils.h
               EmbeddedFrag.h
               RDDepictor.h DEST GraphMol/Depictor)
 
 rdkit_test(testDepictor testDepictor.cpp
-           LINK_LIBRARIES Depictor ChemTransforms FileParsers SmilesParse SubstructMatch GraphMol RDGeometryLib RDGeneral )
+           LINK_LIBRARIES ${RDK_COORDGEN_LIBS} Depictor ChemTransforms FileParsers SmilesParse SubstructMatch GraphMol RDGeometryLib RDGeneral )
 
 FILE(GLOB TEST_OUTPUT_FILES "${CMAKE_CURRENT_SOURCE_DIR}/test_data/*.out.sdf")
 get_directory_property(extra_clean_files ADDITIONAL_MAKE_CLEAN_FILES)
