--- a/Code/GraphMol/ForceFieldHelpers/UFF/CMakeLists.txt
+++ b/Code/GraphMol/ForceFieldHelpers/UFF/CMakeLists.txt
@@ -1,4 +1,7 @@
 rdkit_test(testUFFForceFieldHelpers testUFFHelpers.cpp
            LINK_LIBRARIES 
            ForceFieldHelpers
-           DistGeomHelpers DistGeometry FileParsers MolTransforms SmilesParse SubstructMatch ForceField MolAlign Optimizer EigenSolvers Alignment GraphMol RDGeometryLib RDGeneral  ${RDKit_THREAD_LIBS})
+           ${RDK_COORDGEN_LIBS} Depictor 
+           DistGeomHelpers DistGeometry FileParsers MolTransforms SmilesParse
+	   SubstructMatch ForceField MolAlign Optimizer EigenSolvers Alignment
+	   GraphMol RDGeometryLib RDGeneral  ${RDKit_THREAD_LIBS})
