--- a/External/AvalonTools/Wrap/CMakeLists.txt
+++ b/External/AvalonTools/Wrap/CMakeLists.txt
@@ -3,6 +3,8 @@ rdkit_python_extension(pyAvalonTools
                        pyAvalonTools.cpp 
                        DEST Avalon
                        LINK_LIBRARIES 
-                       AvalonLib avalon_clib SmilesParse FileParsers GraphMol DataStructs RDGeometryLib RDGeneral RDBoost)
+                       AvalonLib avalon_clib
+		       ${RDK_COORDGEN_LIBS} Depictor SubstructMatch
+		       SmilesParse FileParsers GraphMol DataStructs RDGeometryLib RDGeneral RDBoost)
 add_pytest(pyAvalonTools
          ${CMAKE_CURRENT_SOURCE_DIR}/testAvalonTools.py)
