--- a/Code/GraphMol/ForceFieldHelpers/MMFF/CMakeLists.txt
+++ b/Code/GraphMol/ForceFieldHelpers/MMFF/CMakeLists.txt
@@ -1,4 +1,5 @@
 rdkit_test(testMMFFForceFieldHelpers testMMFFHelpers.cpp
            LINK_LIBRARIES 
            ForceFieldHelpers
-           DistGeomHelpers DistGeometry FileParsers MolTransforms SmilesParse SubstructMatch ForceField MolAlign Optimizer EigenSolvers Alignment GraphMol RDGeometryLib RDGeneral ${RDKit_THREAD_LIBS})
+${RDK_COORDGEN_LIBS} Depictor
+DistGeomHelpers DistGeometry FileParsers MolTransforms SmilesParse SubstructMatch ForceField MolAlign Optimizer EigenSolvers Alignment GraphMol RDGeometryLib RDGeneral ${RDKit_THREAD_LIBS})
