--- a/Code/GraphMol/MolAlign/CMakeLists.txt
+++ b/Code/GraphMol/MolAlign/CMakeLists.txt
@@ -5,7 +5,7 @@ rdkit_headers(AlignMolecules.h O3AAlignMolecules.h DEST GraphMol/MolAlign)
 
 rdkit_test(testMolAlign testMolAlign.cpp
            LINK_LIBRARIES MolAlign Descriptors
-FileParsers DistGeomHelpers MolTransforms ForceFieldHelpers 
+${RDK_COORDGEN_LIBS} Depictor FileParsers DistGeomHelpers MolTransforms ForceFieldHelpers 
 SmilesParse DistGeometry ForceField Optimizer EigenSolvers Alignment SubstructMatch
 GraphMol RDGeneral RDGeometryLib ${RDKit_THREAD_LIBS})
 
