--- a/Code/GraphMol/MolTransforms/CMakeLists.txt
+++ b/Code/GraphMol/MolTransforms/CMakeLists.txt
@@ -4,10 +4,9 @@ rdkit_library(MolTransforms MolTransforms.cpp
 rdkit_headers(MolTransforms.h DEST GraphMol/MolTransforms)
 
 rdkit_test(testMolTransforms test1.cpp 
-           LINK_LIBRARIES MolTransforms 
-FileParsers SmilesParse 
-EigenSolvers 
-GraphMol RDGeometryLib RDGeneral 
-)
+           LINK_LIBRARIES MolTransforms
+	   ${RDK_COORDGEN_LIBS} Depictor SubstructMatch
+           FileParsers SmilesParse 
+	   EigenSolvers GraphMol RDGeometryLib RDGeneral )
 
 add_subdirectory(Wrap)
