--- a/External/CoordGen/CMakeLists.txt
+++ b/External/CoordGen/CMakeLists.txt
@@ -51,7 +51,7 @@ if(RDK_BUILD_COORDGEN_SUPPORT)
 
     rdkit_test(testCoordGen test.cpp
       LINK_LIBRARIES
-      ${RDK_COORDGEN_LIBS}
+      ${RDK_COORDGEN_LIBS} Depictor
       FileParsers SmilesParse SubstructMatch GraphMol
       RDGeneral DataStructs RDGeneral RDGeometryLib
       ${RDKit_THREAD_LIBS})
