--- a/Code/JavaWrappers/CMakeLists.txt
+++ b/Code/JavaWrappers/CMakeLists.txt
@@ -19,6 +19,9 @@ endif(RDK_BUILD_AVALON_SUPPORT)
 if(RDK_BUILD_INCHI_SUPPORT)
   set(swigRDKitLibList "${swigRDKitLibList}RDInchiLib;${INCHI_LIBRARIES};")
 endif(RDK_BUILD_INCHI_SUPPORT)
+if(RDK_BUILD_COORDGEN_SUPPORT)
+  set(swigRDKitLibList "${swigRDKitLibList};${RDK_COORDGEN_LIBS}")
+endif(RDK_BUILD_COORDGEN_SUPPORT)
 set(swigRDKitLibList "${swigRDKitLibList}"
   "FilterCatalog;Catalogs;FMCS;MolDraw2D;FileParsers;SmilesParse;"
   "Depictor;SubstructMatch;ChemReactions;Fingerprints;ChemTransforms;"
